# bazel_template

./: .bazel_downloader.cfg  .bazelrc  .clang-format  .gitignore  .ycm_extra_conf.py  BUILD  CPPLINT.cfg  HOME  MODULE.bazel  README.md  WORKSPACE  build_log  generate.sh  generator.sh  graph.in  jemalloc_defs.h  jemalloc_internal_defs.h  log  pprof.out  private_namespace.h  prof.out  run_all_build.sh  tmp
bazel/: BUILD  BUILD.example  aarch64_preprocess.sh  aws-sdk-cpp.BUILD  blake3.BUILD  boost.BUILD  boost.bzl  brotli.BUILD  build.bzl  bzip2.BUILD  c-ares.BUILD  cc_toolchain.BUILD  cjson.BUILD  common.bzl  cpplint.BUILD  cpplint.bzl  crc32c.BUILD  curl.BUILD  fatal.BUILD  fb303.BUILD  fbthrift.BUILD  fbthrift.patch  fizz.BUILD  fmt.BUILD  folly.BUILD  folly.patch  folly.src.BUILD  gen_local_config_git.py  gflags.BUILD  gflags.bzl  gflags.patch  glog.BUILD  gperftools.BUILD  gperftools.make.BUILD  grpc.patch  imagemagick.BUILD  jemalloc.BUILD  jemalloc.make.BUILD  leveldb.BUILD  libaio.BUILD  (+48 more)
bazel_script/: BUILD  BUILD.example  bzip2.BUILD  c-ares.BUILD  common.bzl  crc32c.BUILD  curl.BUILD  double-conversion.BUILD  fb303.BUILD  fbthrift.BUILD  fizz.BUILD  fmt.BUILD  folly.BUILD  gen_local_config_git.py  gperftools.BUILD  jemalloc.BUILD  leveldb.BUILD  libdwarf.BUILD  libevent.BUILD  liboqs.BUILD  libsodium.BUILD  libunwind.BUILD  liburing.BUILD  libuv.BUILD  lz4.BUILD  mbedtls.BUILD  mvfst.BUILD  nacos_sdk.BUILD  numactl.BUILD  openssl.BUILD  openssl.make.BUILD  openwrt_aarch64_toolchain.BUILD  pcre2.BUILD  proxygen.BUILD  rapidjson.BUILD  redis-plus-plus.BUILD  (+5 more)
(+276 files in other folders)
