###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(
    name = "bazel_template",
    version = "1.0.0",
)

bazel_dep(
    name = "protobuf",
    dev_dependency = True,
    repo_name = "com_google_protobuf",
    version = "27.2",
)
